// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lad-tech/mobydick-core/InputField renders correctly 1`] = `
<View
  accessible={true}
  style={
    [
      {
        "minWidth": 130,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#353A45",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 14,
            "fontWeight": "600",
            "lineHeight": 18,
            "minHeight": 18,
          },
          undefined,
        ]
      }
    >
      title
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#EDEFF3",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
        },
        {
          "height": 48,
        },
        null,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      selectionColor="#20242D"
      style={
        [
          {
            "borderRadius": 8,
            "flex": 1,
            "outlineWidth": 0,
            "padding": 0,
            "paddingLeft": 18,
            "paddingRight": 16,
            "paddingVertical": 12,
            "textAlignVertical": undefined,
          },
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 20,
            "minHeight": 20,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        {
          "color": "#9BA1B0",
          "fontFamily": "Neotis",
          "fontSize": 16,
          "marginRight": 4,
        }
      }
    >
      
    </Text>
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#9BA1B0",
            "fontFamily": "Inter-Regular",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 16,
            "minHeight": 16,
          },
          {
            "flex": 1,
          },
        ]
      }
    >
      subtitle
    </Text>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/InputField renders correctly disabled 1`] = `
<View
  accessible={true}
  style={
    [
      {
        "minWidth": 130,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "rgba(21, 28, 44, 0.1)",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
        },
        {
          "height": 48,
        },
        null,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={false}
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      selectionColor="#20242D"
      style={
        [
          {
            "borderRadius": 8,
            "flex": 1,
            "outlineWidth": 0,
            "padding": 0,
            "paddingLeft": 18,
            "paddingRight": 16,
            "paddingVertical": 12,
            "textAlignVertical": undefined,
          },
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 20,
            "minHeight": 20,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/InputField renders correctly disabled 2`] = `
<View
  accessible={true}
  style={
    [
      {
        "minWidth": 130,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "rgba(21, 28, 44, 0.1)",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
        },
        {
          "height": 48,
        },
        null,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={false}
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      selectionColor="#20242D"
      style={
        [
          {
            "borderRadius": 8,
            "flex": 1,
            "outlineWidth": 0,
            "padding": 0,
            "paddingLeft": 18,
            "paddingRight": 16,
            "paddingVertical": 12,
            "textAlignVertical": undefined,
          },
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 20,
            "minHeight": 20,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/InputField renders correctly focused/blur 1`] = `
<View
  accessible={true}
  style={
    [
      {
        "minWidth": 130,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#EDEFF3",
          "borderColor": "rgba(21, 28, 44, 0.4)",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
        },
        {
          "height": 48,
        },
        null,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      selectionColor="#20242D"
      style={
        [
          {
            "borderRadius": 8,
            "flex": 1,
            "outlineWidth": 0,
            "padding": 0,
            "paddingLeft": 18,
            "paddingRight": 16,
            "paddingVertical": 12,
            "textAlignVertical": undefined,
          },
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 20,
            "minHeight": 20,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/InputField renders correctly focused/blur 2`] = `
<View
  accessible={true}
  style={
    [
      {
        "minWidth": 130,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#EDEFF3",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
        },
        {
          "height": 48,
        },
        null,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      selectionColor="#20242D"
      style={
        [
          {
            "borderRadius": 8,
            "flex": 1,
            "outlineWidth": 0,
            "padding": 0,
            "paddingLeft": 18,
            "paddingRight": 16,
            "paddingVertical": 12,
            "textAlignVertical": undefined,
          },
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 20,
            "minHeight": 20,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/InputField renders correctly multiline = false 1`] = `
<View
  accessible={true}
  style={
    [
      {
        "minWidth": 130,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#353A45",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 14,
            "fontWeight": "600",
            "lineHeight": 18,
            "minHeight": 18,
          },
          undefined,
        ]
      }
    >
      title
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#EDEFF3",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
        },
        {
          "height": 48,
        },
        null,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      selectionColor="#20242D"
      style={
        [
          {
            "borderRadius": 8,
            "flex": 1,
            "outlineWidth": 0,
            "padding": 0,
            "paddingLeft": 18,
            "paddingRight": 16,
            "paddingVertical": 12,
            "textAlignVertical": undefined,
          },
          [
            {
              "color": "#20242D",
              "fontSize": 16,
              "padding": 0,
            },
          ],
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/InputField renders correctly multiline = true 1`] = `
<View
  accessible={true}
  style={
    [
      {
        "minWidth": 130,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#353A45",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 14,
            "fontWeight": "600",
            "lineHeight": 18,
            "minHeight": 18,
          },
          undefined,
        ]
      }
    >
      title
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": undefined,
          "backgroundColor": "#EDEFF3",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
        },
        {
          "minHeight": 80,
        },
        null,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      multiline={true}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      selectionColor="#20242D"
      style={
        [
          {
            "borderRadius": 8,
            "flex": 1,
            "outlineWidth": 0,
            "padding": 0,
            "paddingLeft": 18,
            "paddingRight": 16,
            "paddingVertical": 12,
            "textAlignVertical": "top",
          },
          [
            {
              "color": "#20242D",
              "fontSize": 16,
              "padding": 0,
            },
          ],
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/InputField renders correctly secureTextEntry 1`] = `
<View
  accessible={true}
  style={
    [
      {
        "minWidth": 130,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#353A45",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 14,
            "fontWeight": "600",
            "lineHeight": 18,
            "minHeight": 18,
          },
          undefined,
        ]
      }
    >
      title
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#EDEFF3",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
        },
        {
          "height": 48,
        },
        null,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      secureTextEntry={true}
      selectionColor="#20242D"
      style={
        [
          {
            "borderRadius": 8,
            "flex": 1,
            "outlineWidth": 0,
            "padding": 0,
            "paddingLeft": 18,
            "paddingRight": 16,
            "paddingVertical": 12,
            "textAlignVertical": undefined,
          },
          [
            {
              "color": "#20242D",
              "fontSize": 16,
              "padding": 0,
            },
          ],
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        {
          "color": "#9BA1B0",
          "fontFamily": "Neotis",
          "fontSize": 16,
          "marginRight": 4,
        }
      }
    >
      
    </Text>
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#9BA1B0",
            "fontFamily": "Inter-Regular",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 16,
            "minHeight": 16,
          },
          {
            "flex": 1,
          },
        ]
      }
    >
      subtitle
    </Text>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/InputField renders correctly valid 1`] = `
<View
  accessible={true}
  style={
    [
      {
        "minWidth": 130,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "rgba(91, 153, 249, 0.1)",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
        },
        {
          "height": 48,
        },
        null,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      selectionColor="#20242D"
      style={
        [
          {
            "borderRadius": 8,
            "flex": 1,
            "outlineWidth": 0,
            "padding": 0,
            "paddingLeft": 18,
            "paddingRight": 16,
            "paddingVertical": 12,
            "textAlignVertical": undefined,
          },
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 20,
            "minHeight": 20,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/InputField renders correctly valid 2`] = `
<View
  accessible={true}
  style={
    [
      {
        "minWidth": 130,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "rgba(91, 153, 249, 0.1)",
          "borderColor": "#29A35C",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
        },
        {
          "height": 48,
        },
        null,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      selectionColor="#20242D"
      style={
        [
          {
            "borderRadius": 8,
            "flex": 1,
            "outlineWidth": 0,
            "padding": 0,
            "paddingLeft": 18,
            "paddingRight": 16,
            "paddingVertical": 12,
            "textAlignVertical": undefined,
          },
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 20,
            "minHeight": 20,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/InputField renders correctly wrong 1`] = `
<View
  accessible={true}
  style={
    [
      {
        "minWidth": 130,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#EDEFF3",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
        },
        {
          "height": 48,
        },
        null,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      selectionColor="#20242D"
      style={
        [
          {
            "borderRadius": 8,
            "flex": 1,
            "outlineWidth": 0,
            "padding": 0,
            "paddingLeft": 18,
            "paddingRight": 16,
            "paddingVertical": 12,
            "textAlignVertical": undefined,
          },
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 20,
            "minHeight": 20,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        {
          "color": "#F54C3D",
          "fontFamily": "Neotis",
          "fontSize": 16,
          "marginRight": 4,
        }
      }
    >
      
    </Text>
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#F54C3D",
            "fontFamily": "Inter-Regular",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 16,
            "minHeight": 16,
          },
          {
            "flex": 1,
          },
        ]
      }
    >
      subtitle
    </Text>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/InputField renders correctly wrong 2`] = `
<View
  accessible={true}
  style={
    [
      {
        "minWidth": 130,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#EDEFF3",
          "borderColor": "#F54C3D",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
        },
        {
          "height": 48,
        },
        null,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      selectionColor="#20242D"
      style={
        [
          {
            "borderRadius": 8,
            "flex": 1,
            "outlineWidth": 0,
            "padding": 0,
            "paddingLeft": 18,
            "paddingRight": 16,
            "paddingVertical": 12,
            "textAlignVertical": undefined,
          },
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 20,
            "minHeight": 20,
          },
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        {
          "color": "#F54C3D",
          "fontFamily": "Neotis",
          "fontSize": 16,
          "marginRight": 4,
        }
      }
    >
      
    </Text>
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#F54C3D",
            "fontFamily": "Inter-Regular",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 16,
            "minHeight": 16,
          },
          {
            "flex": 1,
          },
        ]
      }
    >
      subtitle
    </Text>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/InputField renders title titleProps 1`] = `
<View
  accessible={true}
  style={
    [
      {
        "minWidth": 130,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#5E6678",
            "fontFamily": "Inter-Medium",
            "fontSize": 14,
            "fontWeight": "500",
            "lineHeight": 18,
            "minHeight": 18,
          },
          undefined,
        ]
      }
    >
      title
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#EDEFF3",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
        },
        {
          "height": 48,
        },
        null,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      multiline={false}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      selectionColor="#20242D"
      style={
        [
          {
            "borderRadius": 8,
            "flex": 1,
            "outlineWidth": 0,
            "padding": 0,
            "paddingLeft": 18,
            "paddingRight": 16,
            "paddingVertical": 12,
            "textAlignVertical": undefined,
          },
          [
            {
              "color": "#20242D",
              "fontSize": 16,
              "padding": 0,
            },
          ],
          undefined,
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;
